# gitlab-releases

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  tox.ini
.github/workflows/: pull_request.yml  release.yml
docs/: get-started.md  how-to-customize.md  how-to-guides.md  index.md
gitlab_releases/: apps.py  client.py  conf.py  models.py  paginator.py  parser.py  urls.py  utils.py  views.py
gitlab_releases/templates/gitlab_releases/: changelog_detail.html  release_list.html
gitlab_releases/templatetags/: gitlab_releases_filters.py
how-to-guides/: index.html
search/: search_index.json
tests/: settings.py  test_client.py  test_models.py  test_parser.py  test_utils.py  test_views.py
